<resources>
    <string name="welcome">欢迎：  </string>
    <string name="activity_text">请登录</string>
    <string name="login_or_register">请登录/注册</string>
    <string name="app_name">导航</string>
    <string name="child_scenic_add">添加景点</string>
    <string name="connect_server_fail">连接服务器失败</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="login_null">用户名或密码不能为空</string>
    <string name="login_hint_id">请输入用户账号</string>
    <string name="login_hint_password">请输入用户密码</string>
    <string name="login_result_error">用户名或密码错误</string>
    <string name="login_result_success">登陆成功</string>
    <string name="register_button_submit">提交</string>
    <string name="register_button_cancel">取消</string>
    <string name="register_nickname">请输入昵称</string>
    <string name="register_nickname_pwd_validate">昵称或密码不能为空</string>
    <string name="register_pwd_not_equals">两次密码输入不一致</string>
    <string name="register_result_error">注册失败</string>
    <string name="register_result_success">注册成功</string>
    <string name="register_repassword">请再次输入密码</string>
    <string name="search_cities">搜索城市</string>
    <string name="parent_scenic_add">添加景区</string>
    <string name="parent_scenic_add_province">所在省市:</string>
    <string name="parent_scenic_add_city">所在城市:</string>
    <string name="parent_scenic_add_name">请输入景区名</string>
    <string name="parent_scenic_add_price">景区门票价格 </string>
    <string name="scenic_opentime">开放日:</string>
    <string name="scenic_time">0:00</string>
    <string name="scenic_start_time">开始时间:</string>
    <string name="scenic_open_time">开放时间:</string>
    <string name="scenic_end_time">结束时间:</string>
    <string name="parent_scenic_brief">请输入景区简介</string>
    <string name="child_scenic_add_name">请输入子景点名</string>
    <string name="child_scenic_add_price">请输入子景点门票价格</string>
    <string name="child_scenic_brief">请输入子景点简介</string>
    <string name="parent_scenic_selected">你所选择的景区为： </string>
    <string name="child_scenic_added">你所添加的子景点为： </string>
    <string name="scenic_add_error">添加景区失败</string>
    <string name="scenic_add_success">添加景区成功</string>
    <string name="child_add_button">添加子景点</string>
    <string name="submit">提交</string>
    <string name="clear">清空</string>
    <string name="home">首页</string>
    <string name="me">我的</string>
    <string name="exit">注销</string>
    <string name="ask_information_error">请求数据错误</string>
    <string name="analyze_information_error">解析数据错误</string>
    <string name="brief">简介 </string>
    <string name="speak">语音报读</string>
    <string name="navigation">开始导游</string>
    <string name="mLatitude">纬度</string>
    <string name="mLongtitude">经度</string>
    <string name="guide">到这去</string>
    <string name="way_picture">从相册选取图片</string>
    <string name="error_price">请输入正确的价格</string>
    <string name="error_longtitude">请输入正确的纬度</string>
    <string name="error_latitude">请输入正确的经度</string>
    <string name="line_one">线路一</string>
    <string name="line_two">线路二</string>
    <string name="line_three">线路三</string>
    <string name="line_add_btn">添加线路</string>
    <string name="line_total">总线路条数: </string>
    <string name="line_empty">您未设置任何线路</string>
</resources>
