<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip">

    <TextView android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_text"/>

    <EditText android:id="@+id/usernickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_id"
        android:layout_below="@+id/text"
        android:maxLines="1"
        />

    <EditText android:id="@+id/userpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_hint_password"
        android:layout_below="@+id/usernickname"
        android:maxLines="1"/>

    <Button android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userpwd"
        android:text="@string/title_activity_login"
        />

    <Button android:id="@+id/login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:text="@string/title_activity_register"
        />

</RelativeLayout>
