<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="ifContentScrolls">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="551dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView android:id="@+id/child_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/child_scenic_add"
            android:gravity="center"
            />

        <EditText android:id="@+id/childScenicName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/child_scenic_add_name"
            android:layout_below="@+id/parent_text"
            android:maxLines="1"
            />

        <EditText android:id="@+id/mLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mLatitude"
            android:layout_below="@+id/childScenicName"
            android:maxLines="1"
            />

        <EditText android:id="@+id/mLongtitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mLongtitude"
            android:layout_below="@+id/mLatitude"
            android:maxLines="1"
            />

        <EditText android:id="@+id/childScenicPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/child_scenic_add_price"
            android:layout_below="@+id/mLongtitude"
            android:maxLines="1"
            />

        <TextView android:id="@+id/childScenicOpenDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/childScenicPrice"
            android:text="@string/scenic_opentime"
            android:paddingTop="2dp"
            android:paddingLeft="4dp"
            />

        <Spinner android:id="@+id/childScenicOpenDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/childScenicPrice"
            android:layout_toRightOf="@+id/childScenicOpenDateText"
            android:entries="@array/timeArray"
            />

        <TextView android:id="@+id/childScenicStartTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scenic_start_time"
            android:layout_below="@+id/childScenicOpenDate"
            android:paddingTop="13dp"
            android:paddingLeft="4dp"
            />

        <Button android:id="@+id/childScenicStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scenic_time"
            android:layout_below="@+id/childScenicOpenDate"
            android:layout_toRightOf="@+id/childScenicStartTimeText"
            />

        <TextView android:id="@+id/childScenicEndTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scenic_end_time"
            android:layout_below="@+id/childScenicStartTime"
            android:paddingTop="13dp"
            android:paddingLeft="4dp"
            />

        <Button android:id="@+id/childScenicEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scenic_time"
            android:layout_below="@+id/childScenicStartTime"
            android:layout_toRightOf="@+id/childScenicEndTimeText"
            />

        <EditText android:id="@+id/child_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="8"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:background="@android:drawable/edit_text"
            android:layout_below="@+id/childScenicEndTime"
            android:hint="@string/child_scenic_brief"
            />

        <Button android:id="@+id/way_picture_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/way_picture"
            android:layout_below="@+id/child_content"/>

        <ImageView
            android:id="@+id/image_up_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/way_picture_child"/>
        />

        <Button android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_below="@+id/image_up_child"/>

        <Button android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submit"
            android:text="@string/clear"
            />

    </RelativeLayout>
</ScrollView>
