<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip">

    <TextView android:id="@+id/lineText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:paddingLeft="4dp"
        />

    <TextView android:id="@+id/lineOneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/line_one"
        android:layout_below="@+id/lineText"
        android:paddingTop="2dp"
        android:paddingLeft="4dp"
        />

    <EditText android:id="@+id/lineOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lineOneText"
        android:maxLines="1"
        />

    <TextView android:id="@+id/lineTwoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineOne"
        android:text="@string/line_two"
        android:paddingTop="2dp"
        android:paddingLeft="4dp"
        />

    <EditText android:id="@+id/lineTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineOne"
        android:layout_toRightOf="@+id/lineTwoText"
        android:maxLines="1"
        />

    <TextView android:id="@+id/lineThreeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineTwo"
        android:text="@string/line_one"
        android:paddingTop="2dp"
        android:paddingLeft="4dp"
        />

    <EditText android:id="@+id/lineThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineTwo"
        android:layout_toRightOf="@+id/lineThreeText"
        android:maxLines="1"
        />

    <Button android:id="@+id/line_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineThree"
        android:text="@string/submit"
        />

    <Button android:id="@+id/line_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_below="@+id/line_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
