<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_scenic_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sanstoi.activity.ScenicAddActivity">

    <TextView android:id="@+id/parent_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView android:id="@+id/child_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parent_text"
        />

    <TextView android:id="@+id/line_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/child_text"
        />

    <Button
        android:id="@+id/child_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/child_text"
        android:text="@string/child_add_button"
        />

    <Button
        android:id="@+id/line_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/child_add_button"
        android:text="@string/line_add_btn"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_add_button"
        android:text="@string/submit"
        />

</RelativeLayout>
